Fix overlap and change title to refrigeration

--- a/style.css
+++ b/style.css
@@ -253,7 +253,7 @@ img {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 14rem;
+    padding-top: 22rem;
 }
 
 .hero h1 {
